community/phpmyadmin: add secfixes

--- a/community/phpmyadmin/APKBUILD
+++ b/community/phpmyadmin/APKBUILD
@@ -20,6 +20,11 @@ source="https://files.phpmyadmin.net/phpMyAdmin/$pkgver/$_fullpkgname.tar.xz
 options="!check"  # tests require running MySQL
 
 # secfixes:
+#   5.0.1-r0:
+#     - CVE-2020-5504
+#   4.9.2-r0:
+#     - CVE-2019-18622
+#     - CVE-2019-19617
 #   4.9.1-r0:
 #     - CVE-2019-12922
 #   4.9.0.1-r0:
