--- a/community/gitea/APKBUILD
+++ b/community/gitea/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: 6543 <6543@obermui.de>
 # Maintainer: Carlo Landmeter <clandmeter@gmail.com>
 pkgname=gitea
-pkgver=1.10.2
+pkgver=1.10.3
 pkgrel=0
 pkgdesc="A self-hosted Git service written in Go"
 url="https://gitea.io"
@@ -17,7 +17,7 @@ install="$pkgname.pre-install"
 pkgusers="gitea"
 pkggroups="www-data"
 subpackages="$pkgname-openrc"
-source="${pkgname}-${pkgver}.tar.gz::https://github.com/go-gitea/$pkgname/archive/v$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/go-gitea/gitea/archive/v$pkgver.tar.gz
 	$pkgname.initd
 	$pkgname.ini
 	"
@@ -30,7 +30,6 @@ esac
 prepare() {
 	mkdir -p ${builddir%/*}
 	mv "$srcdir"/$pkgname-$pkgver "$builddir"/
-	cd "$builddir"
 	default_prepare
 }
 
@@ -70,7 +69,7 @@ package() {
 	setcap cap_net_bind_service=+ep \
 		"$pkgdir"/usr/bin/$pkgname
 
-	install -D -m 644 -o gitea -g www-data "$srcdir"/${pkgname}.ini \
+	install -D -m 644 -o gitea -g www-data "$srcdir"/gitea.ini \
 		"$pkgdir"/etc/$pkgname/app.ini
 	chown gitea:www-data "$pkgdir"/etc/$pkgname
 
@@ -81,6 +80,6 @@ package() {
 		"$pkgdir"/etc/init.d/$pkgname
 }
 
-sha512sums="b378d02f27bb03ffd1a8ace2da8d827e07e023a02de4b1b4b354659316539ea38bf2735aa01fb1f997b05f7bb557394d0b6d15a1974747d86826ec1af02efb27  gitea-1.10.2.tar.gz
+sha512sums="2e3962069f2160ea536a7ab4322261c5063fffe0d291796cba61c9d0a3cf965d339441bc0b2259883695a6ce4b62de1f3e16e3fc78016ce303847b70f4f8ff34  gitea-1.10.3.tar.gz
 2497e6f2a18e3ceb65352cd220eab2c1c0893d0e731600462a60397de2b70d7c1de7db2af2769b25fe708b0822c811bb20dc797b59b9dd93efb376bea1c35796  gitea.initd
 27a202006d6e8d4146659f6356eaa99437f9f596dd369e9430d64b859bc6a1ad16091eef09232aa385fe1bf8ca94bbdf31b94975068220ad10338cded384f726  gitea.ini"
