--- a/community/plasma-integration/APKBUILD
+++ b/community/plasma-integration/APKBUILD
@@ -4,11 +4,11 @@ pkgname=plasma-integration
 pkgver=5.17.5
 pkgrel=0
 pkgdesc="Qt Platform Theme integration plugins for the Plasma workspaces"
-arch="all"
+arch="all !armhf" #qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="(LGPL-2.1-only OR LGPL-3.0-only) AND LGPL-2.1-only AND ((LGPL-2.1-only WITH Nokia-Qt-exception-1.1) OR (GPL-3.0-only WITH Nokia-Qt-exception-1.1))"
 depends="font-noto ttf-hack qqc2-desktop-style"
-makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtx11extras-dev qt5-qtquickcontrols2-dev kconfig-dev kconfigwidgets-dev ki18n-dev kiconthemes-dev kio-dev knotifications-dev kwayland-dev kwidgetsaddons-dev kwindowsystem-dev kconfigwidgets-dev breeze-dev libxcursor-dev"
+makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtx11extras-dev qt5-qtquickcontrols2-dev kconfig-dev kconfigwidgets-dev ki18n-dev kiconthemes-dev kio-dev knotifications-dev kwayland-dev kwidgetsaddons-dev kwindowsystem-dev breeze-dev libxcursor-dev"
 checkdepends="xvfb-run"
 source="https://download.kde.org/stable/plasma/$pkgver/plasma-integration-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
