--- a/community/plasma/APKBUILD
+++ b/community/plasma/APKBUILD
@@ -5,7 +5,7 @@ pkgver=5.17.5
 pkgrel=0
 pkgdesc="Plasma (Base) meta package"
 url="https://kde.org/plasma-desktop"
-arch="noarch !s390x !ppc64le" # Limited by kdeplasma-addons -> qt5-qtwebengine
+arch="noarch !s390x !ppc64le !armhf" # Limited by kdeplasma-addons -> qt5-qtwebengine armhf: qtdeclarative
 options="!check" # No tests for a metapkg
 license="GPL-3.0-or-later"
 depends="
