community/kaccounts-providers: disable on armhf due to qtdeclarative

--- a/community/kaccounts-providers/APKBUILD
+++ b/community/kaccounts-providers/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=kaccounts-providers
 pkgver=19.12.0
 pkgrel=1
-arch="all"
+arch="all !armhf" # qtdeclarative
 url="https://kde.org/applications/internet/"
 pkgdesc="Small system to administer web accounts for the sites and services across the KDE desktop"
 license="GPL-2.0-or-later"
