--- a/community/corefm/APKBUILD
+++ b/community/corefm/APKBUILD
@@ -4,7 +4,7 @@ pkgname=corefm
 pkgver=2.8.0
 pkgrel=0
 pkgdesc="A lightweight file-manager from the CoreApps family."
-arch="all"
+arch="all !armhf" # missing qtdeclarative
 url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
