testing/micropython: disable on armhf, fails to build

--- a/testing/micropython/APKBUILD
+++ b/testing/micropython/APKBUILD
@@ -8,7 +8,8 @@ url="https://www.micropython.org/"
 
 # ppc64le: mpy-cross fails to compile with "unsupported relocation
 # armv7: 21 unit tests fail (not minor stuff line double precision issues)
-arch="all !ppc64le !armv7"
+# armhf: fails to build
+arch="all !ppc64le !armv7 !armhf"
 
 license="MIT"
 makedepends="libffi-dev python3"
