--- a/testing/thunderbird/APKBUILD
+++ b/testing/thunderbird/APKBUILD
@@ -8,7 +8,7 @@ _xulver=$pkgver
 pkgrel=1
 pkgdesc="Thunderbird email client"
 url="https://www.thunderbird.net/"
-arch="all !s390x" # limited by rust and cargo
+arch="all !s390x !armhf" # limited by rust and cargo. Fails on armhf due to bad assembly
 license="GPL-3.0-or-later AND LGPL-2.1-or-later AND MPL-2.0"
 options="!check !strip"
 depends="
