community/libluv: upgrade to 1.34.1.1

--- a/community/libluv/APKBUILD
+++ b/community/libluv/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=libluv
-_release=0
-pkgver=1.32.0.$_release
-pkgrel=1
+_release=1
+pkgver=1.34.1.$_release
+pkgrel=0
 pkgdesc="Bare libuv bindings for lua"
 options="!check" # No testsuite
 url="https://github.com/luvit/luv"
@@ -14,26 +14,19 @@ subpackages="$pkgname-dev"
 source="https://github.com/luvit/luv/releases/download/${pkgver%.*}-$_release/luv-${pkgver%.*}-$_release.tar.gz"
 builddir="$srcdir/luv-${pkgver%.*}-$_release"
 
-prepare() {
-	default_prepare
-	mkdir -p "$builddir"/build
-}
-
 build() {
-	cd  "$builddir"/build
-	cmake -GNinja \
+	cmake -B build -G Ninja \
 		-DWITH_SHARED_LIBUV=ON \
 		-DLUA_BUILD_TYPE=System \
 		-DBUILD_MODULE=OFF \
 		-DBUILD_SHARED_LIBS=ON \
 		-DCMAKE_INSTALL_PREFIX=/usr \
-		..
-	ninja
+		.
+	ninja -C build
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" ninja install
+	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="935a27e04aa13dc433a05512c0d332157d9cdc63a8688e034b07bd9e303ee37ea3e19aa350ac4858075bbc23a9f976aa295424faa77f7e7863060a744e1e1e83  luv-1.32.0-0.tar.gz"
+sha512sums="8c5f317659ca9e1b7fc2eb42da9b309b0786716d21f64f03888c1a7a4ae7fe3edbeb8e2ce6cc82b8a640dfd47e26dabe9114e47619006070b9050837ca308e13  luv-1.34.1-1.tar.gz"
