main/libwebsockets: upgrade to 3.2.2

--- a/main/libwebsockets/APKBUILD
+++ b/main/libwebsockets/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: V.Krishn <vkrishn4@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libwebsockets
-pkgver=3.2.1
-pkgrel=1
+pkgver=3.2.2
+pkgrel=0
 pkgdesc="C library for lightweight websocket clients and servers"
 url="https://libwebsockets.org"
 arch="all"
@@ -19,7 +19,9 @@ build() {
 	cmake .. \
 		-DCMAKE_BUILD_TYPE=MinSizeRel \
 		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_VERBOSE_MAKEFILE=TRUE
+		-DCMAKE_VERBOSE_MAKEFILE=TRUE \
+		-DLWS_WITH_STATIC=OFF \
+		-DLWS_LINK_TESTAPPS_DYNAMIC=ON
 	make
 }
 
@@ -41,4 +43,4 @@ _test() {
 	mv "$pkgdir"/usr/share "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="a2d30a7a0416a26484743efdaa8635542480a74b0ef0f6e172dab5de4688486efb13457fc8a884d9916f76322cab0cbc9ab675f496558edd1dd9b833d087207d  libwebsockets-3.2.1.tar.gz"
+sha512sums="be6cd57ae1d15de059c277ce56e9ccc87f7918811b40a427c96978397f2b1d446e1b5ed6ae62a6aa82c6d775871d6a15885d283d74d7887e98205ab61d206fc0  libwebsockets-3.2.2.tar.gz"
