community/mblaze: upgrade to 0.6

--- a/community/mblaze/APKBUILD
+++ b/community/mblaze/APKBUILD
@@ -1,21 +1,16 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
 pkgname=mblaze
-pkgver=0.5.1
+pkgver=0.6
 pkgrel=0
 pkgdesc="Unix utilities to deal with Maildir"
 url="https://github.com/chneukirchen/mblaze"
 arch="all"
 license="CC0-1.0"
-depends=""
-depends_dev=""
-makedepends=""
 checkdepends="perl-utils"
-install=""
 subpackages="$pkgname-doc $pkgname-crypto::noarch"
 options="!check" # currently fail on the builder
-source="$pkgname-$pkgver.tar.gz::https://github.com/chneukirchen/$pkgname/archive/v$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="$pkgname-$pkgver.tar.gz::https://github.com/chneukirchen/mblaze/archive/v$pkgver.tar.gz"
 
 build() {
 	make CFLAGS="$CFLAGS" -C "$builddir"
@@ -26,7 +21,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"
 	make PREFIX="/usr" DESTDIR="$pkgdir" install
 
 	mkdir -p "$pkgdir"/usr/share/doc/$pkgname/examples/
@@ -45,4 +39,4 @@ crypto() {
 		"$subpkgdir"/usr/bin
 }
 
-sha512sums="ae810e30092d24ee89f33e28769268513217813bf1aacc9a970bc84e0c1a9ee7c986572ab5ecac314330de20a45879fcec9738119c08a9945932be55f8f649f7  mblaze-0.5.1.tar.gz"
+sha512sums="3d3c50d6ea82271f2c1c4139111826df5457fed671ea22d36f168857cfb41861278af6aba687704f4bd5f7ff997abaf7b809c5d6c6767e39954aab0bfff0564d  mblaze-0.6.tar.gz"
