main/mesa: use qualified provides for deprecated subpackages
This fixes upgrading from the old subpackages - the old package
is now removed and replaced by the new subpackage.

Closes !3167

--- a/main/mesa/APKBUILD
+++ b/main/mesa/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mesa
 pkgver=19.3.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Mesa DRI OpenGL library"
 url="https://www.mesa3d.org"
 arch="all"
@@ -72,7 +72,10 @@ fi
 _dri_driverdir=/usr/lib/xorg/modules/dri
 _dri_drivers="r100,r200,nouveau"
 _gallium_drivers="r300,r600,radeonsi,nouveau,swrast,virgl"
-_gallium_provides="$pkgname-dri-swrast $pkgname-dri-virtio"
+_gallium_provides="
+	$pkgname-dri-swrast=$pkgver-r$pkgrel
+	$pkgname-dri-virtio=$pkgver-r$pkgrel
+	"
 _vulkan_drivers="amd"
 _arch_opts=""
 _vulkan_overlay_layer=false
@@ -87,7 +90,7 @@ x86*)
 			$pkgname-dri-intel:_dri_deprecated \
 			$pkgname-vulkan-intel:_vulkan \
 			$pkgname-vulkan-layer:_vulkan_layer"
-	_gallium_provides="$_gallium_provides $pkgname-dri-vmwgfx"
+	_gallium_provides="$_gallium_provides $pkgname-dri-vmwgfx=$pkgver-r$pkgrel"
 	_arch_opts="-Ddri3=true"
 	case "$CARCH" in
 	x86)
@@ -97,14 +100,14 @@ x86*)
 armhf|armv7|aarch64)
 	_gallium_drivers="${_gallium_drivers},vc4,v3d,freedreno,kmsro,lima,panfrost,etnaviv,tegra"
 	_gallium_provides="$_gallium_provides
-		$pkgname-dri-vc4
-		$pkgname-dri-v3d
-		$pkgname-dri-freedreno
-		$pkgname-dri-kmsro
-		$pkgname-dri-lima
-		$pkgname-dri-panfrost
-		$pkgname-dri-etnaviv
-		$pkgname-dri-tegra
+		$pkgname-dri-vc4=$pkgver-r$pkgrel
+		$pkgname-dri-v3d=$pkgver-r$pkgrel
+		$pkgname-dri-freedreno=$pkgver-r$pkgrel
+		$pkgname-dri-kmsro=$pkgver-r$pkgrel
+		$pkgname-dri-lima=$pkgver-r$pkgrel
+		$pkgname-dri-panfrost=$pkgver-r$pkgrel
+		$pkgname-dri-etnaviv=$pkgver-r$pkgrel
+		$pkgname-dri-tegra=$pkgver-r$pkgrel
 		"
 	;;
 esac
