main/libxkbcommon: upgrade to 0.10.0

--- a/main/libxkbcommon/APKBUILD
+++ b/main/libxkbcommon/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=libxkbcommon
-pkgver=0.9.1
+pkgver=0.10.0
 pkgrel=0
 pkgdesc="a keyboard handling library"
 url="https://www.xkbcommon.org/"
@@ -17,11 +17,10 @@ makedepends="
 	meson"
 checkdepends="bash"
 subpackages="$pkgname-static $pkgname-dev $pkgname-x11"
-source="http://xkbcommon.org/download/libxkbcommon-$pkgver.tar.xz"
-
+source="$pkgname-$pkgver.tar.gz::https://github.com/xkbcommon/libxkbcommon/archive/xkbcommon-$pkgver.tar.gz"
+builddir="$srcdir/libxkbcommon-xkbcommon-$pkgver"
 
 build() {
-	cd "$builddir"
 	meson \
 		--prefix=/usr \
 		-Denable-wayland=true \
@@ -33,12 +32,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	ninja -C build test
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
@@ -48,4 +45,4 @@ x11() {
 	mv "$pkgdir"/usr/lib/*x11*.so.* "$subpkgdir"/usr/lib
 }
 
-sha512sums="8d4551a06e7dd4936633f544409401dc33f8f1900adb5daa6403615c71f321d17212db739f89a5b3e393d729b3f33167691404849a25d5526b403fd9ec3e8878  libxkbcommon-0.9.1.tar.xz"
+sha512sums="682a08124491ba9115011b145836ffac26932acdd804a76f7fb076b6f12b8a1ad23480e6272cb5c374cde7fb6c32ce2bb431b8b3e15316f132f236367ca1a964  libxkbcommon-0.10.0.tar.gz"
