community/imagemagick: add secfixes

--- a/community/imagemagick/APKBUILD
+++ b/community/imagemagick/APKBUILD
@@ -29,6 +29,8 @@ source="$_pkgname-$_pkgver.tar.gz::https://github.com/ImageMagick/ImageMagick/ar
 builddir="$srcdir/$_pkgname-$_pkgver"
 
 # secfixes:
+#   7.0.9.7-r0:
+#     - CVE-2019-19952
 #   7.0.8.62-r0:
 #     - CVE-2019-17547
 #   7.0.8.56-r0:
@@ -61,6 +63,8 @@ builddir="$srcdir/$_pkgname-$_pkgver"
 #     - CVE-2019-13134
 #     - CVE-2019-13133
 #   7.0.8.44-r0:
+#     - CVE-2019-19949
+#     - CVE-2019-19948
 #     - CVE-2019-16713
 #     - CVE-2019-16712
 #     - CVE-2019-16711
