community/imagemagick6: add secfixes

--- a/community/imagemagick6/APKBUILD
+++ b/community/imagemagick6/APKBUILD
@@ -22,6 +22,8 @@ source="$_pkgname-$_pkgver.tar.gz::https://github.com/ImageMagick/ImageMagick6/a
 builddir="$srcdir/$_pkgname-$_pkgver"
 
 # secfixes:
+#   6.9.10.80-r0:
+#     - CVE-2019-19952
 #   6.9.10.55-r0:
 #     - CVE-2019-13454
 #   6.9.10.53-r0:
@@ -49,6 +51,8 @@ builddir="$srcdir/$_pkgname-$_pkgver"
 #     - CVE-2019-13134
 #     - CVE-2019-13133
 #   6.9.10.43-r0:
+#     - CVE-2019-19949
+#     - CVE-2019-19948
 #     - CVE-2019-14981
 #     - CVE-2019-14980
 #     - CVE-2019-11598
