--- a/main/dahdi-linux/APKBUILD
+++ b/main/dahdi-linux/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Timo Teras <timo.teras@iki.fi>
 # Maintainer: Timo Teras <timo.teras@iki.fi>
 pkgname=dahdi-linux
-pkgver=3.0.0
+pkgver=3.1.0
 pkgrel=0
 pkgdesc="Firmware for Digium Asterisk Hardware Device Interface drivers"
 url="http://www.asterisk.org"
@@ -9,7 +9,7 @@ arch="noarch"
 license="GPL"
 makedepends="wget tar"
 subpackages="$pkgname-dev"
-source="http://downloads.digium.com/pub/telephony/dahdi-linux/releases/$pkgname-$pkgver.tar.gz"
+source="http://downloads.digium.com/pub/telephony/dahdi-linux/releases/dahdi-linux-$pkgver.tar.gz"
 
 # We online install the firmwares in this package since those are common for all
 # kernel flavors. We also install the headers for the -dev package.
@@ -26,4 +26,4 @@ package() {
 		install-include install-firmware
 }
 
-sha512sums="7c281059f4c8faf3733f7790dc184d810a4a2839ceaa79d6190128bea182db38bc293f04a996254950531abea5532cb030d50265cd044e0847f1e8ece7b15395  dahdi-linux-3.0.0.tar.gz"
+sha512sums="440f5e44c933c609f2b3cfcf013c84bcd0c37929a43d69aac0276b11484cb890cd5939c5ac5950cad54d934d27ee6ff0b18f2bdd58477ed9be8055de107727b4  dahdi-linux-3.1.0.tar.gz"
