main/dahdi-tools: upgrade to 3.1.0

--- a/main/dahdi-tools/APKBUILD
+++ b/main/dahdi-tools/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: Timo Teras <timo.teras@iki.fi>
 # Maintainer: Timo Teras <timo.teras@iki.fi>
 pkgname=dahdi-tools
-pkgver=2.11.1
+pkgver=3.1.0
 pkgrel=0
 pkgdesc="Digium Asterisk Hardware Device Interface management utilities"
 url="http://www.asterisk.org"
 arch="all"
-license="GPL"
+license="GPL-2.0-or-later"
 depends=""
 depends_dev="bsd-compat-headers linux-headers dahdi-linux-dev newt-dev"
-makedepends="perl file $depends_dev"
+makedepends="perl file autoconf automake libtool $depends_dev"
 install=
 subpackages="$pkgname-doc $pkgname-dev"
 source="http://downloads.digium.com/pub/telephony/dahdi-tools/releases/$pkgname-$pkgver.tar.gz
@@ -17,6 +17,12 @@ source="http://downloads.digium.com/pub/telephony/dahdi-tools/releases/$pkgname-
 	$pkgname.initd"
 
 builddir="$srcdir"/$pkgname-$pkgver
+
+prepare() {
+	default_prepare
+	autoreconf -fi
+} 
+
 
 build() {
 	cd "$builddir"
@@ -40,6 +46,6 @@ package() {
 	install -m755 -D "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/dahdi
 }
 
-sha512sums="d13f799baeaecab4601a379fb703fc169906e873f71baa9d13d688b2a3f4490a1c59eea8bd50e1a08a0712b38e556f8a17d02a8ea5289a003ca91b570ae5b8a6  dahdi-tools-2.11.1.tar.gz
+sha512sums="e0e5bf24e4834ca39ef7dc1af1bb7ef26bd258a8b2cb2406a7e1ffed25b4b1d44a5fce41d97c5ad7fc6ebb66f965759d2b49ffa6d89845786f43eadb89ff4694  dahdi-tools-3.1.0.tar.gz
 45955caf04368ff30d60db0b3e892d940c9ac0422b337186ed251108ce25ab305d4590efff452f53f160a53fcd26a273f21d6d093307b426a3a2a6df53584daa  fix-musl.patch
 3850ab9e323ec31d676d311c97d0cde70b809379b6c01c8ff6d5a01a860eb43bf3f18f2de53e952365d17f40638c7cb0481682d96cea5b7fdb1423d3e762e2f3  dahdi-tools.initd"
