community/ripgrep: add missing checkdepends on xz

--- a/community/ripgrep/APKBUILD
+++ b/community/ripgrep/APKBUILD
@@ -8,11 +8,12 @@ url="https://github.com/BurntSushi/ripgrep"
 arch="x86_64 armhf armv7" # limited by cargo pkg
 license="MIT public-domain"
 makedepends="cargo asciidoc pcre2-dev"
+checkdepends="xz"
 subpackages="$pkgname-doc
 	$pkgname-bash-completion:bashcomp:noarch
 	$pkgname-zsh-completion:zshcomp:noarch
 	$pkgname-fish-completion:fishcomp:noarch"
-source="$pkgname-$pkgver.tar.gz::https://github.com/BurntSushi/$pkgname/archive/$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/BurntSushi/ripgrep/archive/$pkgver.tar.gz"
 
 build() {
 	cargo build --release --features 'pcre2'
