main/python3: add support for AF_BLUETOOTH
fixes #7352

--- a/main/python3/APKBUILD
+++ b/main/python3/APKBUILD
@@ -5,7 +5,7 @@ pkgname=python3
 # the python3-tkinter's pkgver needs to be synchronized with this.
 pkgver=3.8.1
 _basever="${pkgver%.*}"
-pkgrel=0
+pkgrel=1
 pkgdesc="A high-level scripting language"
 url="https://www.python.org/"
 arch="all"
@@ -15,7 +15,7 @@ subpackages="$pkgname-dbg $pkgname-dev $pkgname-doc $pkgname-tests::noarch
 	$pkgname-wininst"
 makedepends="expat-dev openssl-dev zlib-dev ncurses-dev bzip2-dev xz-dev
 	sqlite-dev libffi-dev tcl-dev linux-headers gdbm-dev readline-dev
-	!gettext-dev"
+	bluez-dev !gettext-dev"
 source="https://www.python.org/ftp/python/$pkgver/Python-$pkgver.tar.xz
 	fix-xattrs-glibc.patch
 	musl-find_library.patch
