--- a/main/iproute2/APKBUILD
+++ b/main/iproute2/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=iproute2
 pkgver=5.4.0
-pkgrel=0
+pkgrel=1
 pkgdesc="IP Routing Utilities"
 url="https://www.linuxfoundation.org/collaborate/workgroups/networking/iproute2"
 arch="all"
@@ -29,7 +29,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var
-	make CCOPTS="-D_GNU_SOURCE $CFLAGS" LIBDIR=/lib
+	make CCOPTS="-D_GNU_SOURCE $CFLAGS"
 }
 
 package() {
