--- a/community/gnome/APKBUILD
+++ b/community/gnome/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome
 pkgver=3.34.0
-pkgrel=1
+pkgrel=2
 pkgdesc="GNOME (Base) meta package"
 url="https://www.gnome.org"
 arch="x86 x86_64 armv7 aarch64" # GNOME isn't available on all arches yet
@@ -115,6 +115,7 @@ _apps() {
 		sound-juicer
 		sushi
 		totem
+		transmission
 		vinagre
 		vino
 		yelp
