testing/traefik: provide linker flags
The `traefik version` command
now prints correct information.

--- a/testing/traefik/APKBUILD
+++ b/testing/traefik/APKBUILD
@@ -1,8 +1,9 @@
 # Contributor: Joe Holden <jwh@zorins.us>
+# Contributor: Michał Polański <michal@polanski.me>
 # Maintainer: Joe Holden <jwh@zorins.us>
 pkgname=traefik
 pkgver=2.1.2
-pkgrel=0
+pkgrel=1
 pkgdesc="The Cloud Native Edge Router"
 url="https://traefik.io"
 arch="all !x86 !s390x !armhf !armv7" # tests fails on x86 and armhf
@@ -26,6 +27,7 @@ builddir="$srcdir/src/github.com/containous/$pkgname"
 #   - CVE-2019-9514
 
 export GOPATH="$srcdir"
+export BUILD_TIMESTAMP=$(date -u "+%Y-%m-%dT%TZ" ${SOURCE_DATE_EPOCH:+-d @$SOURCE_DATE_EPOCH})
 
 prepare() {
 	default_prepare
@@ -35,7 +37,14 @@ prepare() {
 
 build() {
 	go generate
-	go build -v -o bin/$pkgname ./cmd/$pkgname
+	go build \
+		-ldflags "
+		-X github.com/containous/traefik/v2/pkg/version.Version=$pkgver
+		-X github.com/containous/traefik/v2/pkg/version.Codename=cantal
+		-X github.com/containous/traefik/v2/pkg/version.BuildDate=$BUILD_TIMESTAMP
+		" \
+		-v -o bin/$pkgname \
+		./cmd/$pkgname
 }
 
 check() {
