testing/picard: disable on armhf due to qtdeclarative

--- a/testing/picard/APKBUILD
+++ b/testing/picard/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=picard
 pkgver=2.2.3
 pkgrel=0
-arch="all"
+arch="all !armhf" # qtdeclarative
 url="https://picard.musicbrainz.org/"
 pkgdesc="Official MusicBrainz tagger"
 license="GPL-2.0-or-later"
