--- a/community/py3-argon2-cffi/APKBUILD
+++ b/community/py3-argon2-cffi/APKBUILD
@@ -8,7 +8,7 @@ url="https://argon2-cffi.readthedocs.io/en/stable/"
 arch="all !s390x" # Fails to build
 license="MIT"
 depends="python3"
-makedepends="argon2-dev python3-dev py3-setuptools libffi-dev"
+makedepends="argon2-dev python3-dev py3-setuptools libffi-dev py3-wheel"
 checkdepends="py3-pytest py3-hypothesis"
 source="https://pypi.io/packages/source/a/argon2-cffi/argon2-cffi-$pkgver.tar.gz"
 builddir="$srcdir/argon2-cffi-$pkgver"
