testing/podman: install configuration files
- add conmon and cni-plugins to dependencies
- install default CNI network
- patch libpod.conf

--- a/testing/podman/APKBUILD
+++ b/testing/podman/APKBUILD
@@ -2,15 +2,17 @@
 # Maintainer: Michał Polański <michal@polanski.me>
 pkgname=podman
 pkgver=1.7.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Simple management tool for pods, containers, and images"
 url="https://podman.io/"
 options="!check" # TODO: enable tests
 arch="all"
 license="Apache-2.0"
+depends="conmon cni-plugins"
 makedepends="go gpgme-dev libseccomp-dev libassuan-dev go-md2man btrfs-progs-dev bash"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/containers/libpod/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/containers/libpod/archive/v$pkgver.tar.gz
+	libpod-config.patch"
 builddir="$srcdir/libpod-$pkgver"
 
 build() {
@@ -20,7 +22,9 @@ build() {
 
 package() {
 	unset LDFLAGS
-	make install.bin install.man PREFIX=/usr DESTDIR="$pkgdir"
+	make install.bin install.man install.cni install.config \
+		PREFIX=/usr DESTDIR="$pkgdir"
 }
 
-sha512sums="986ec7123127d3ffb26cecc39a2ae3d8a6dd3d147327449fc4e9d17f6e6606bde278f13920d0aef59410262801251e7b4cfe099cb5caafe9773533e8476848fe  podman-1.7.0.tar.gz"
+sha512sums="986ec7123127d3ffb26cecc39a2ae3d8a6dd3d147327449fc4e9d17f6e6606bde278f13920d0aef59410262801251e7b4cfe099cb5caafe9773533e8476848fe  podman-1.7.0.tar.gz
+fb0997502e996ed0b1e99b11970380d4e7a61ab1aa0bf54ec925edd7defbbe2fec67f4cb28ab4a6f0de4ba770ca11c952893a35a0c71f10bd2c3d19f3c836803  libpod-config.patch"
