community/appstream: upgrade to 0.12.10

--- a/community/appstream/APKBUILD
+++ b/community/appstream/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer:
 pkgname=appstream
-pkgver=0.12.9
-pkgrel=1
+pkgver=0.12.10
+pkgrel=0
 pkgdesc="Provides a standard for creating app stores across distributions"
 url="https://distributions.freedesktop.org/wiki/AppStream"
 arch="all"
 license="LGPL-2.1-or-later AND GPL-2.0-or-later"
 makedepends="meson yaml-dev libxml2-dev glib-dev lmdb-dev gobject-introspection-dev
-	gperf qt5-qtbase-dev"
+	gperf qt5-qtbase-dev libsoup-dev"
 triggers="$pkgname.trigger=/usr/share/app-info/*"
 install="$pkgname.post-install $pkgname.post-upgrade"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-qt $pkgname-lang"
@@ -49,4 +49,4 @@ qt() {
 	mkdir -p "$subpkgdir"/usr/lib
 	mv "$pkgdir"/usr/lib/libAppStreamQt.so.* "$subpkgdir"/usr/lib
 }
-sha512sums="af3d5e7885ee09fb6ef9ea0a5c2386141736166ce42912e618f1ee04f2b28866b27c7c5e326221574eb78933b32de8db9f76023bf54e528aded1607e5130992e  AppStream-0.12.9.tar.xz"
+sha512sums="5cd7da7adbd035947bde6a6d7655dc2f7c1be25cef102e51ef88e8f684a83b196a41b440edaabdd89da69a9117a26dad30e548b86b50f324f0ba70eef95a6060  AppStream-0.12.10.tar.xz"
