community/libx86emu: upgrade to 2.6

--- a/community/libx86emu/APKBUILD
+++ b/community/libx86emu/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=libx86emu
-pkgver=2.4
+pkgver=2.6
 pkgrel=0
 pkgdesc="x86 emulation library"
 url="https://github.com/wfeldt/libx86emu"
 arch="all"
 license="MIT"
 subpackages="$pkgname-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/wfeldt/$pkgname/archive/$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/wfeldt/libx86emu/archive/$pkgver.tar.gz"
 options="!check"  # FIXME: test fails to build
 
 _flags="VERSION=$pkgver MAJOR_VERSION=${pkgver%%.*} GIT2LOG= LIBDIR=/usr/lib"
@@ -25,4 +25,4 @@ package() {
 	make $_flags DESTDIR="$pkgdir" install
 }
 
-sha512sums="521b24aee13faa1388a81a586334171fbe614da4efd12b68e7fcb608eb810cab7920776024aace43e7adb236fc9a4d35e08cbe53c5064549c1eb9871334ff683  libx86emu-2.4.tar.gz"
+sha512sums="67c87dc7ecc15f4422058c131eb08a062ba7ad35af2212bcb45df4837b7a91b17eb534778558ffbddb2322982d55835f7ab29eb5eed0d2a27f5f0f9b5eb4afd5  libx86emu-2.6.tar.gz"
