--- a/testing/grafana-image-renderer/APKBUILD
+++ b/testing/grafana-image-renderer/APKBUILD
@@ -1,21 +1,19 @@
 # Contributor: Konstantin Kulikov <k.kulikov2@gmail.com>
 # Maintainer: Konstantin Kulikov <k.kulikov2@gmail.com>
 pkgname=grafana-image-renderer
-pkgver=1.0.8b2
-_pkgver=1.0.8-beta2
+pkgver=1.0.8
 pkgrel=0
 pkgdesc="Grafana Backend Plugin that handles rendering of panels & dashboards to PNGs using headless chrome"
 url="https://github.com/grafana/grafana-image-renderer"
-arch="x86_64" # Same as grafana.
+arch="x86_64" # Requires chromium, aarch64 and armv7 doesn't build because of grpc.
 license="Apache-2.0"
 makedepends="yarn"
 depends="nodejs ttf-opensans chromium ca-certificates"
 options="!check" # Has no test suite.
 install="$pkgname.pre-install"
 subpackages="$pkgname-openrc"
-source="$pkgname-$_pkgver.tar.gz::https://github.com/grafana/grafana-image-renderer/archive/v$_pkgver.tar.gz
-	$pkgname.initd $pkgname.confd 10-host-param.patch"
-builddir="$srcdir/$pkgname-$_pkgver"
+source="$pkgname-$pkgver.tar.gz::https://github.com/grafana/grafana-image-renderer/archive/v$pkgver.tar.gz
+	$pkgname.initd $pkgname.confd $pkgname.json"
 
 build() {
 	export CHROME_BIN="/usr/bin/chromium-browser"
@@ -31,11 +29,12 @@ build() {
 package() {
 	install -Dm755 "$srcdir/$pkgname.initd" "$pkgdir/etc/init.d/$pkgname"
 	install -Dm644 "$srcdir/$pkgname.confd" "$pkgdir/etc/conf.d/$pkgname"
+	install -Dm644 "$srcdir/$pkgname.json" "$pkgdir/etc/$pkgname.json"
 	install -dm755 "$pkgdir/usr/share/$pkgname"
 	cp -r "$builddir/node_modules" "$builddir/build" "$builddir/proto" "$pkgdir/usr/share/$pkgname/"
 }
 
-sha512sums="01e8dbb779c16053ca117169eaa922521fbff3b36df76711ca89e7ad82fc4a2a39e108d6c882010beb27d548629dde4cd696147d1c46aa7f501dcb77e89fc84e  grafana-image-renderer-1.0.8-beta2.tar.gz
-79d28359b873ecc584dae7cc590137e4b380606e494e4614e3d1da307e6616dcdc86181bd5d09f97f6df13d7863bf90f9393336df437a97a9124dc6c1ba15762  grafana-image-renderer.initd
-ee4fd884d39eb556ffebeb3bc8fc66295d660e94f0a1d58dea57745da967f62216096e481e417cecaf8a51c4181dff4f4586b70cfc2ee7dbad622a6b28735ad0  grafana-image-renderer.confd
-04cc3b837c6c12d600c84b98d68e098147ff041b1e64de44f3a9da0c0fa1adca8ddc58aa3991354e9d48a137603a4bc5a284ae2c2a7997af4460bc14d4c3bf71  10-host-param.patch"
+sha512sums="e56052defa8f107e44825b3e81d90451b110d2c6b2ef40560e46d2c1661a5267665ea17d29d21af2b129dbe601307ecf221674a59c2928ae58eb4098c6607bb7  grafana-image-renderer-1.0.8.tar.gz
+1d260c94c1eebdc84c0dff462372f9b2fceced0d10fbcf64ec2509f87524f7f39f86173636da6f140bed3e329d6f03b634e826ea19fc30eaf3d6ea232eb4e4c3  grafana-image-renderer.initd
+88a119ad18fbde490ab9213487ae16b8aeeb65437275a1112f7423fa581a7470e6fb68654c2fd439afa68c0333aeefd0711f3fffd53615fa51d0702c80ed1c1b  grafana-image-renderer.confd
+4fce1f7111e24d6f6a14abe77d1c4096c05b0a9a1274e78a77af75594be4c0ccacd0d234ddbc88372d291bfc7096bb7f4e859463b4aaf627bcf6162b87df7413  grafana-image-renderer.json"
