--- a/main/make/APKBUILD
+++ b/main/make/APKBUILD
@@ -1,26 +1,16 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=make
-pkgver=4.2.1
-pkgrel=2
+pkgver=4.3
+pkgrel=0
 pkgdesc="GNU make utility to maintain groups of programs"
 url="https://www.gnu.org/software/make"
 arch="all"
 license="GPL-3.0-or-later"
-depends=""
 subpackages="$pkgname-doc"
-source="https://ftp.gnu.org/gnu/$pkgname/$pkgname-$pkgver.tar.bz2
-	fix-atexit-exit.patch
-	fix-glob-dtype.patch
+source="https://ftp.gnu.org/gnu/make/make-$pkgver.tar.gz
 	"
 
-prepare() {
-	cd "$builddir"
-	update_config_sub
-	default_prepare
-}
-
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -32,15 +22,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-	[ "$CBUILD" != "$CHOST" ] || (ulimit -n 64 && PERL5LIB=. make check) || return 1
+	[ "$CBUILD" != "$CHOST" ] || (ulimit -n 64 && PERL5LIB=. make check)
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="9cf00869a2f938492554f71d8cb288b5b009b3bd0489ef164f2c8f6532fc37db5c7e20af1dea288536e7c9710ee0bc6e1ddcdfc4928a8540e6e43661741825b8  make-4.2.1.tar.bz2
-a1639d9caf84a24a9f161a30d8b5dcd079b13faf2a5e3d514ff39fa11b13e796c7ff34c46ac2b56656d52129b4d3627c6102b129a4ab011f065076d872ef3992  fix-atexit-exit.patch
-f0ae3f192912ef6ee7f938c1c5448e2c4797b3233933f4a72eaeffd402f5c4d2c06680029042a18db8f8158fbd098527d45e0c19390642d05ad77c530a2f68e8  fix-glob-dtype.patch"
+sha512sums="9a1185cc468368f4ec06478b1cfa343bf90b5cd7c92c0536567db0315b0ee909af53ecce3d44cfd93dd137dbca1ed13af5713e8663590c4fdd21ea635d78496b  make-4.3.tar.gz"
