orphan a bunch of unused packages

--- a/community/mingw-w64-binutils/APKBUILD
+++ b/community/mingw-w64-binutils/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=mingw-w64-binutils
 pkgver=2.33.1
 pkgrel=0
