--- a/community/mingw-w64-gcc/APKBUILD
+++ b/community/mingw-w64-gcc/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=mingw-w64-gcc
 pkgver=9.2.0
 pkgrel=1
