--- a/community/mingw-w64-headers-bootstrap/APKBUILD
+++ b/community/mingw-w64-headers-bootstrap/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=mingw-w64-headers-bootstrap
 pkgver=6.0.0
 pkgrel=0
@@ -18,9 +18,9 @@ esac
 _dstring="/* Dummy header, which gets overriden, if winpthread library gets installed.  */"
 
 package() {
-	mkdir -p "$pkgdir"/usr/${_target}/include
-	echo "${_dstring}" > "$pkgdir"/usr/${_target}/include/pthread_signal.h
-	echo "${_dstring}" > "$pkgdir"/usr/${_target}/include/pthread_time.h
-	echo "${_dstring}" > "$pkgdir"/usr/${_target}/include/pthread_unistd.h
+	mkdir -p "$pkgdir"/usr/$_target/include
+	echo "$_dstring" > "$pkgdir"/usr/$_target/include/pthread_signal.h
+	echo "$_dstring" > "$pkgdir"/usr/$_target/include/pthread_time.h
+	echo "$_dstring" > "$pkgdir"/usr/$_target/include/pthread_unistd.h
 }
 
