--- a/community/mingw-w64-winpthreads/APKBUILD
+++ b/community/mingw-w64-winpthreads/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=mingw-w64-winpthreads
 pkgver=7.0.0
 pkgrel=0
