--- a/community/wf-recorder/APKBUILD
+++ b/community/wf-recorder/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=wf-recorder
 pkgver=0.2
 pkgrel=1
