--- a/community/exa/APKBUILD
+++ b/community/exa/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer: Leo <thinkabit.ukim@gmail.com>
+# Maintainer:
 pkgname=exa
 pkgver=0.9.0
 pkgrel=1
