main/linux-lts: backport patch for i915 gpu
ref #11026
upstream bug: https://gitlab.freedesktop.org/drm/intel/issues/674

--- a/main/linux-lts/APKBUILD
+++ b/main/linux-lts/APKBUILD
@@ -18,6 +18,7 @@ options="!strip"
 _config=${config:-config-lts.${CARCH}}
 install=
 source="https://cdn.kernel.org/pub/linux/kernel/v${pkgver%%.*}.x/linux-$_kernver.tar.xz
+	0001-drm-i915-gt-Detect-if-we-miss-WaIdleLiteRestore.patch
 	config-lts.aarch64
 	config-lts.armv7
 	config-lts.x86
@@ -220,6 +221,7 @@ _dev() {
 }
 
 sha512sums="9f60f77e8ab972b9438ac648bed17551c8491d6585a5e85f694b2eaa4c623fbc61eb18419b2656b6795eac5deec0edaa04547fc6723fbda52256bd7f3486898f  linux-5.4.tar.xz
+dc0acb47b68c60bede649524fd7429b888df2e1aa16a93f445700d1ffacada8b870a4a75d6aeb33d0e2f2c427efbc80e24a3670c5c539e0fca5b754e7f2a4df3  0001-drm-i915-gt-Detect-if-we-miss-WaIdleLiteRestore.patch
 ea4eb2086b0e0e0d8a4fd6bd6ef6a2d752990f4cbf21a2d571eeae0b419b61abed8c91a1d353ebc98d4963845e2b8ee2df6e5c28859f6b3a604a39dfe7fc1125  config-lts.aarch64
 0235e5af7d73f89dc66f97f1808744c52ded83d6281e455d08e1edfae02ca067715accf14f6cc8890b87941abcbad5a7cfd6025f427af694b52bb6d8420d89cf  config-lts.armv7
 fbb89cbafd267caecdfd641eb19eff0d636141bea072c420bd020121dacf0b2942787cee4ed2d01978947d15da9642303a0942715aa1973322cb3e154013b06b  config-lts.x86
