community/nextcloud: upgrade to 18.0.0

--- a/community/nextcloud/APKBUILD
+++ b/community/nextcloud/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=nextcloud
-pkgver=17.0.2
+pkgver=18.0.0
 pkgrel=0
 pkgdesc="A safe home for all your data"
 url="http://nextcloud.com"
@@ -20,6 +20,7 @@ provides="$pkgname-dav=$pkgver-r$pkgrel
 	$pkgname-lookup_server_connector=$pkgver-r$pkgrel
 	$pkgname-twofactor_backupcodes=$pkgver-r$pkgrel
 	$pkgname-workflowengine=$pkgver-r$pkgrel
+	$pkgname-gallery=$pkgver-r$pkgrel
 	"
 install="$pkgname.pre-install $pkgname.pre-upgrade $pkgname.post-upgrade
 	$pkgname-initscript.post-install"
@@ -65,7 +66,6 @@ _apps="accessibility
 	files_versions
 	files_videoplayer
 	firstrunwizard
-	gallery
 	logreader
 	nextcloud_announcements
 	notifications
@@ -232,13 +232,13 @@ _package_app() {
 	mv "$pkgdir"/$_appsdir/$appname "$subpkgdir"/$_appsdir/
 }
 
-sha512sums="83ef95c5a878848ab9138c350eba16b613bc239a62f07d934d7d7209a3b35f1fcafa8e8b2b199f4a9ee05548c061c4d5c4502882694c8b81d0cf3814dc25c900  nextcloud-17.0.2.zip
+sha512sums="a92a6b5c5e2da688b8df8dead9e09db7d8a3849e7b35f5fca4c51c4dc1db857dd74a1e2c8284eb05949a29f1292b810575b507463b72608975c93ea7d4be4c93  nextcloud-18.0.0.zip
 59151300c1153cad7fa2a1a972825c81a71df523b319b22799ce1bd846c1a63c7e37c608a125a98e4e733857cc65db9f329fafef7a5b1365d802c476450fce22  nextcloud15-dont-chmod.patch
-3e08f4fe0064461c3e6af6ea8777cdf35b861f267464542242334b4ae171293f7b93c2439a5655e61ab712d0ae9789b381d94d655e6eda52d4878640e8d3b0e3  nextcloud17-app-encryption-info-add-mcrypt.patch
+f84888bc2d5049ab490efea859dd68ab68b92fe1722c57d23d474362e363a05a39fac89f192ba0bbadfddb5ac5009737bf66f37983c1094fdd7cca1cb893390f  nextcloud17-app-encryption-info-add-mcrypt.patch
 aef3c92497d738d6968e0f0b0d415b4953500db24ae14af41ef972665cf7eff00cb6c53dc953845fdbb389c3c965a75b8b14b9247513c05cf4130fe1cfc61731  dont-update-htaccess.patch
 d2100a837fef1eeae5f706650ab4c985d9e00f61efa5526ef76c7c1f5811c3906eb6c3c13c151eff9677a0c303faab64411a5a84d6792728bc520d2c618d7d5b  disable-integrity-check-as-default.patch
 de1b433c2fb2582b599cb25e718e454fc4b93543a5a60eee39a03bcccf35d281594611395bdebe02319bedd9a894507eef97010ebdfca381e0f1a09df283d375  iconv-ascii-translit-not-supported.patch
-478f5cd7c5d30380ea619d3e8ec623217a06a09b27534266f00297545c7d276b068c5d984673eebc5676e8bac7f45112549498944ce3fa678ac8a69541d7c430  use-external-docs-if-local-not-avail.patch
+df1a16414a278c205876ec86c210a02a9009954e2d4f9033ff3c9b76c371e2764ef3587db5a4b8f76302655c6c8688c8729d1685279a77d279d3839cc359fbcd  use-external-docs-if-local-not-avail.patch
 5f73cd9399fa484ef15bd47e803c93381deffbc7699eceadbb5c27e43b20156806d74e5021a64d28f0165ef87b519e962780651711a37bceb9f0b04455dfdce1  nextcloud-config.php
 7388458a9e8b7afd3d3269718306410ffa59c3c23da4bef367a4d7f6d2570136fae9dd421b19c1441e7ffb15a5405e18bb5da67b1a15f9f45e8b98d3fda532ba  nextcloud.logrotate
 dcc57735d7d4af4a7ebbdd1186d301e51d2ae4675022aea6bf1111222dfa188a3a490ebd6e7c8a7ac30046cb7d93f81cec72a51acbc60d0c10b7fb64630c637a  nextcloud.confd
