community/nextcloud: new app photos replaces gallery

--- a/community/nextcloud/APKBUILD
+++ b/community/nextcloud/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=nextcloud
 pkgver=18.0.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A safe home for all your data"
 url="http://nextcloud.com"
 arch="noarch"
@@ -20,7 +20,6 @@ provides="$pkgname-dav=$pkgver-r$pkgrel
 	$pkgname-lookup_server_connector=$pkgver-r$pkgrel
 	$pkgname-twofactor_backupcodes=$pkgver-r$pkgrel
 	$pkgname-workflowengine=$pkgver-r$pkgrel
-	$pkgname-gallery=$pkgver-r$pkgrel
 	"
 install="$pkgname.pre-install $pkgname.pre-upgrade $pkgname.post-upgrade
 	$pkgname-initscript.post-install"
@@ -70,6 +69,7 @@ _apps="accessibility
 	nextcloud_announcements
 	notifications
 	password_policy
+	photos
 	privacy
 	recommendations
 	serverinfo
@@ -213,7 +213,11 @@ _package_app() {
 	local app_deps=""
 
 	case "$appname" in
-		files_sharing) app_deps="-federatedfilesharing";;
+		files_sharing)	app_deps="-federatedfilesharing";;
+		photos)
+				app_deps="-viewer"
+				provides="${pkgname}-gallery=$pkgver-r${pkgrel}"
+		;;
 
 		# XXX: Provides/replaces for backward compatibility with <12.0.0-r2.
 		files_pdfviewer | files_videoplayer)
